// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalLine should render correctly 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-vertical-line"
    >
      <line
        style="stroke: steelblue; pointer-events: none;"
        x1="100"
        x2="100"
        y1="0"
        y2="400"
      />
    </g>
  </svg>
</DocumentFragment>
`;

exports[`VerticalLine should render nothing if missing scale 1`] = `
<DocumentFragment>
  <svg>
    <g
      class="g-vertical-line"
    />
  </svg>
</DocumentFragment>
`;
